--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,19 @@
 {
-  "env": { "browser": true, "es2020": true },
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
   "extends": [
     "airbnb",
     "airbnb/hooks",
-    "plugin:@typescript-eslint/recommended",
-    // "airbnb-typescript",
-    // "eslint:recommended",
-    // "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
-  "plugins": ["@typescript-eslint"],
-  "rules": {
-    "react-refresh/only-export-components": "warn",
-  }
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "@typescript-eslint"
+  ]
 }
