--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.237",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -26,6 +28,9 @@
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
