chore: vite.config 세팅 및 React 관련 eslint 변경
* vite.config에서 manifest 파일 tsconfig.node에 추가
* App.tsx에서 리액트 관련 eslint 오류 해결

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
   },
   "plugins": [
     "@typescript-eslint"
-  ]
+  ],
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }]
+  }
 }
