chore: tsconfig 수정 및 빌드 오류 해결

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   ],
   "rules": {
     "react/jsx-one-expression-per-line": 0,
+    "react/react-in-jsx-scope": 0,
     "react/jsx-filename-extension": [
       1,
       {
