--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.1",
     "@types/chrome": "^0.0.237",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.11",
