--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "outDir": "dist",
+    "target": "es6",
     "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
+      "esnext",
+      "dom",
+      "dom.iterable"
     ],
-    "module": "ESNext",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "allowJs": true
   },
   "include": [
     "src",
