--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,10 @@ jobs:
         run: sh ./build.sh
       - name: Pushes to another repository
         id: push_directory
-        uses: BetaHuhn/deploy-to-vercel-action@latest
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           source-directory: 'output'
           destination-github-username: 'KDKD-common'
           destination-repository-name: 'KDKD-Client'
