--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.AUTO_TOKEN_GITHUB }}
         with:
           source-directory: 'output'
-          destination-github-username: 'KDKD-common'
-          destination-repository-name: 'client'
+          destination-github-username: 'KDKD-Community'
+          destination-repository-name: 'KDKD-Client'
           user-email: ${{ secrets.OFFICIAL_ACCOUNT_EMAIL }}
           commit-message: ${{ github.event.commits[0].message }}
           target-branch: main
