--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,7 @@
   },
   "extends": [
     "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "airbnb",
-    "airbnb/hooks"
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -21,16 +19,6 @@
   "rules": {
     "react/jsx-one-expression-per-line": 0,
     "react/react-in-jsx-scope": 0,
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".js",
-          ".jsx",
-          ".ts",
-          ".tsx"
-        ]
-      }
-    ]
+    "react/jsx-filename-extension": 0
   }
 }
