feat: Save 컴포넌트 대략적인 UI 제작
* 태그를 입력할 수 있는 input과 select 컴포넌트를 제작하여야 한다
* svg 파일들 react 컴포넌트로 변경
  * vite-plugin-svgr은 yarn build 시 오류 발생하여 차선책으로 선택

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@radix-ui/primitive": "^1.0.1",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "class-variance-authority": "^0.6.1",
