--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "web-highlighter": "^0.7.4"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.1",
